# wse-gol

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  requirements.in  requirements.sh  requirements.txt  requirements_cs.in  requirements_cs.sh  requirements_cs.txt
.github/workflows/: ci.yaml
cerebraslib/: bitlogger.csl  bitlogger_impl.csl  bitmanip.csl  optime.csl  population.csl  traitlogger.csl
cerebraslib/genome/: genome_bitdrift.csl  genome_bitdrift_clobber.csl  genome_frozenliteral.csl  genome_frozenliteral1.csl  genome_frozenliteral2.csl  genome_frozenliteral3.csl  genome_frozenliteral4.csl  genome_frozenliteral5.csl  genome_frozenliteral6.csl  genome_frozenliteral7.csl  genome_hsurftiltedsticky.csl  genome_hsurftiltedsticky_tagged.csl  genome_hypermutator.csl  (+12 more)
kernel-async-ga/: README.md  client.py  compile.sh  execute.sh  kernel.csl  layout.csl
kernel-gol/: .gitignore  README.md  client.py  compile.sh  execute.sh  kernel.csl  layout.csl
kernel-test-cerebraslib/: .gitignore  README.md  compile.sh  downstream  execute.sh  kernel.csl
pylib_cs/: _clsc_wsclust_shim_parse_args.py  clsc_wsclust_shim.py  cslc_wsclust_shim.py  pyproject.toml  test.sh
pylib_cs/pylib_cs/: _cslc_wsclust_shim_parse_args.py  _pairwise.py  _print_tree.py  cslc_wsclust_shim.py
pylib_cs/test/: test_clsc_wsclust_shim_parse_args.py  test_cslc_wsclust_shim_parse_args.py  test_print_tree.py
pyscript/: hypermutator-5050-spatial.py  hypermutator-5050-spatial2d.py  hypermutator-5050.py  hypermutator-denovo-spatial.py  hypermutator-denovo-spatial2d.py  hypermutator-denovo.py
(+64 files in other folders)
